<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Eino</string>

    <!-- Navigation -->
    <string name="navigation_landing_label">Welcome</string>
    <string name="navigation_register_label">Register</string>
    <string name="navigation_login_label">Login</string>
    <string name="navigation_books_label">Books</string>
    <string name="navigation_book_detail_label">Book</string>
    <string name="navigation_movies_label">Movies</string>
    <string name="navigation_movie_detail_label">Movie</string>
    <string name="navigation_search_book_label">Search books</string>
    <string name="navigation_search_movie_label">Search movies</string>
    <string name="navigation_settings_label">Settings</string>
    <string name="navigation_profile_label">Profile</string>

    <!-- App bar -->
    <string name="appbar_books_title">Books (%1$d)</string>
    <string name="appbar_movies_title">Movies (%1$d)</string>

    <!-- Auth -->
    <string name="branding_text">eino</string>
    <string name="btn_register_text">Register</string>
    <string name="btn_login_text">Login</string>
    <string name="username_help_text" tools:keep="@string/username_help_text">Username length should be between 3–255 characters</string>
    <string name="password_help_text" tools:keep="@string/password_help_text">Password length should be between 8–255 characters</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password2_hint">Repeat password</string>

    <!-- Validation -->
    <string name="validation_username_empty">Username can\'t be empty</string>
    <string name="validation_password_empty">Password can\'t be empty</string>
    <string name="validation_passwords_dont_match">Passwords don\'t match</string>
    <string name="validation_username_length_invalid">Username length should be between 3–255 characters</string>
    <string name="validation_password_length_invalid">Password length should be between 8–255 characters</string>

    <!-- List item -->
    <string name="list_item_image_description">Item image</string>

    <!-- Common dialogs -->
    <string name="dialog_status_hint">Status</string>
    <string name="dialog_score_hint">Score</string>
    <string name="dialog_score_slider_desc">Score slider</string>
    <string name="dialog_start_date_picker_title">Started</string>
    <string name="dialog_end_date_picker_title">Finished</string>
    <string name="dialog_year_hint">Publication year</string>
    <string name="dialog_image_url_hint">Image URL</string>

    <!-- Book dialogs -->
    <string name="dialog_book_add_action_text">Add book</string>
    <string name="dialog_book_update_action_text">Update book</string>
    <string name="dialog_book_title_hint">Title</string>
    <string name="dialog_book_author_hint">Author</string>
    <string name="dialog_book_publisher_hint">Publisher</string>
    <string name="dialog_book_pages_hint">Pages</string>
    <string name="dialog_book_isbn_hint">ISBN</string>

    <!-- Movie dialogs -->
    <string name="dialog_movie_add_action_text">Add movie</string>
    <string name="dialog_movie_update_action_text">Update movie</string>
    <string name="dialog_movie_title_hint">Title</string>
    <string name="dialog_movie_studio_hint">Studio</string>
    <string name="dialog_movie_director_hint">Director</string>
    <string name="dialog_movie_writer_hint">Writer</string>
    <string name="dialog_movie_duration_hint">Duration in minutes</string>

    <!-- Log out dialog -->
    <string name="dialog_logout_title">Are you sure you want to log out?</string>
    <string name="dialog_logout_btn_positive_text">Log out</string>
    <string name="dialog_logout_btn_negative_text">Cancel</string>

    <!-- Share profile dialog -->
    <string name="dialog_share_profile_title">Share profile</string>
    <string name="dialog_share_profile_btn_copy_link">Copy link</string>
    <string name="dialog_share_profile_btn_share_image">Share image</string>

    <!-- Delete account dialog -->
    <string name="dialog_delete_account_title">Are you sure you want to delete account?</string>
    <string name="dialog_delete_account_warning">NOTE: THIS ACTION IS IRREVERSIBLE!</string>
    <string name="dialog_delete_account_message">This action will permanently delete your account and all associated data. Please confirm your password before proceeding.</string>
    <string name="dialog_delete_account_btn_text">Delete account</string>

    <!-- Export account dialog -->
    <string name="dialog_export_account_title">Export account data</string>
    <string name="dialog_export_account_message">All account data is downloaded as a JSON file. Please confirm your password to continue.</string>
    <string name="dialog_export_account_btn_text">Export</string>

    <!-- Sort dialog -->
    <string name="dialog_sort_title">Sort by</string>
    <string name="dialog_sort_status_title">Status</string>
    <string name="dialog_sort_title_title">Title</string>
    <string name="dialog_sort_score_title">Score</string>
    <string name="dialog_sort_btn_apply">Apply</string>

    <string name="dialog_sort_status_all">All</string>
    <string name="dialog_sort_status_completed">Completed</string>
    <string name="dialog_sort_status_reading">Reading</string>
    <string name="dialog_sort_status_watching">Watching</string>
    <string name="dialog_sort_status_on_hold">On-hold</string>
    <string name="dialog_sort_status_dropped">Dropped</string>
    <string name="dialog_sort_status_planned">Planned</string>

    <string name="dialog_sort_score_ascending">Ascending</string>
    <string name="dialog_sort_score_descending">Descending</string>

    <!-- Item list -->
    <string name="action_sort_label">Sort</string>
    <string name="action_search_label">Search</string>
    <string name="fab_add_desc">Add item</string>

    <!-- Item detail -->
    <string name="action_delete_label">Delete</string>
    <string name="fab_edit_desc">Edit item</string>

    <!-- List error layout -->
    <string name="error_no_items_text">No Items found</string>
    <string name="icon_frown_desc">Frown emoji</string>

    <!-- Item error layout -->
    <string name="error_no_item_text">Couldn\'t find item</string>

    <!-- Search -->
    <string name="search_book_hint">Search books</string>
    <string name="search_movie_hint">Search movies</string>

    <!-- Profile -->
    <string name="profile_settings_title">Settings</string>
    <string name="profile_chart_no_data">Error rendering chart</string>
    <string name="profile_user_info_title">User info</string>
    <string name="profile_user_info_username">Username</string>
    <string name="profile_user_info_registration_date">Registration date</string>
    <string name="profile_user_info_btn_logout_text">Log out</string>
    <string name="profile_user_info_btn_share_text">Share</string>
    <string name="profile_user_info_btn_delete_account_text">Delete account</string>
    <string name="profile_user_info_btn_export_text">Export</string>
    <string name="profile_stats_book_title">Book stats</string>
    <string name="profile_stats_movie_title">Movie stats</string>
    <string name="profile_stats_score_distribution">Score distribution</string>
    <string name="profile_item_count">Count</string>
    <string name="profile_item_score_average">Average score</string>
    <string name="profile_pages_read">Pages read</string>
    <string name="profile_watch_time">Watch time</string>
    <string name="profile_watch_time_value">%1$s hours</string>

    <!-- Settings -->
    <string name="settings_account_header">Account</string>
    <string name="settings_about_header">About</string>
    <string name="settings_theme_header">Theme</string>

    <string name="settings_account_key">account</string>
    <string name="settings_account_summary">Click here to log out</string>

    <string name="settings_username_error">Couldn\'t find user</string>

    <string name="settings_app_key" translatable="false">app</string>

    <string name="settings_author_key" translatable="false">author</string>
    <string name="settings_author_title">Developer</string>
    <string name="settings_author_summary" translatable="false">Jankku</string>

    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="settings_theme_title">Choose theme</string>
    <string name="settings_theme_summary">System, Light, Dark</string>
    <string name="settings_theme_value_system" translatable="false">system</string>
    <string name="settings_theme_value_light" translatable="false">light</string>
    <string name="settings_theme_value_dark" translatable="false">dark</string>
    <string name="settings_theme_entry_system">System default</string>
    <string name="settings_theme_entry_light">Light</string>
    <string name="settings_theme_entry_dark">Dark</string>

    <string name="settings_github_key" translatable="false">github</string>
    <string name="settings_github_title" translatable="false">GitHub</string>
    <string name="settings_github_summary" translatable="false">https://github.com/jankku/eino-android</string>
</resources>