<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_theme_header">
        <ListPreference
            android:dialogTitle="@string/settings_theme_title"
            android:icon="@drawable/ic_light_mode"
            app:defaultValue="@string/settings_theme_value_system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/settings_theme_key"
            app:summary="@string/settings_theme_summary"
            app:title="@string/settings_theme_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about_header">
        <Preference
            app:icon="@drawable/eino_icon_white_small"
            app:key="@string/settings_app_key"
            app:title="@string/app_name" />

        <Preference
            app:icon="@drawable/ic_person"
            app:key="@string/settings_author_key"
            app:summary="@string/settings_author_summary"
            app:title="@string/settings_author_title" />

        <Preference
            app:icon="@drawable/ic_github"
            app:key="@string/settings_github_key"
            app:summary="@string/settings_github_summary"
            app:title="@string/settings_github_title" />
    </PreferenceCategory>
</PreferenceScreen>