<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_1_5x"
        android:paddingTop="@dimen/spacing_1_5x"
        tools:context=".ui.book.dialog.BookSortDialogFragment">

        <TextView
            android:id="@+id/tvDialogTitle"
            style="@style/TextAppearance.Eino.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_default"
            android:text="@string/dialog_sort_title" />

        <TextView
            android:id="@+id/tvSubtitleFirst"
            style="@style/TextAppearance.Eino.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sort_status_title"
            android:textColor="?android:attr/textColorSecondary" />

        <RadioGroup
            android:id="@+id/rgStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_quarter">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_all" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_watching" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_completed" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_on_hold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_dropped" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_status_planned" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvSubtitleSecond"
            style="@style/TextAppearance.Eino.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_default"
            android:text="@string/dialog_sort_title_title"
            android:textColor="?android:attr/textColorSecondary" />

        <RadioGroup
            android:id="@+id/rgTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_quarter">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_score_ascending" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_score_descending" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvSubtitleThird"
            style="@style/TextAppearance.Eino.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_default"
            android:text="@string/dialog_sort_score_title"
            android:textColor="?android:attr/textColorSecondary" />

        <RadioGroup
            android:id="@+id/rgScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_quarter">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_score_ascending" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_sort_score_descending" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApply"
            style="@style/Widget.Eino.DialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1_5x"
            android:text="@string/dialog_sort_btn_apply"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
