<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:padding="@dimen/spacing_default"
    android:showDividers="middle">

    <TextView
        android:id="@+id/tvDeleteAccountTitle"
        style="@style/TextAppearance.Eino.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_half"
        android:text="@string/dialog_delete_account_title" />

    <TextView
        android:id="@+id/tvDeleteAccountWarning"
        style="@style/TextAppearance.Eino.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_half"
        android:text="@string/dialog_delete_account_warning"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDeleteAccountDescription"
        style="@style/TextAppearance.Eino.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_half"
        android:text="@string/dialog_delete_account_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.Eino.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:importantForAutofill="yes"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDeleteAccount"
        style="@style/Widget.Eino.BigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_default"
        android:text="@string/dialog_delete_account_btn_text" />

</LinearLayout>


