<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:padding="@dimen/spacing_default"
        android:showDividers="middle"
        tools:context=".ui.book.UpdateBookDialogFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookTitle"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_book_title_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookAuthor"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_book_author_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookPublisher"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_book_publisher_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookPublisher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookPages"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_book_pages_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookPages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookIsbn"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_book_isbn_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookIsbn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookYear"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_year_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietBookYear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookStatus"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_status_hint">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactvBookStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvScoreSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/sliderBookScore"
                android:text="@string/dialog_score_hint" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sliderBookScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_score_slider_desc"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookStartDate"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_start_date_picker_title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactvBookStartDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBookEndDate"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_end_date_picker_title">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactvBookEndDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAction"
            style="@style/Widget.Eino.DialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_default"
            app:iconGravity="textStart"
            tools:icon="@drawable/ic_add"
            tools:text="@string/dialog_book_update_action_text" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
