<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_graph"
    app:startDestination="@id/bookListFragment">

    <fragment
        android:id="@+id/bookListFragment"
        android:name="com.jankku.eino.ui.book.BookListFragment"
        android:label="@string/navigation_books_label"
        tools:layout="@layout/fragment_book_list">
        <action
            android:id="@+id/action_bookListFragment_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_bookListFragment_to_addBookDialogFragment"
            app:destination="@id/addBookDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.jankku.eino.ui.book.BookDetailFragment"
        android:label="@string/navigation_book_detail_label"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="book"
            app:argType="com.jankku.eino.data.model.Book" />
        <action
            android:id="@+id/action_bookDetailFragment_to_updateBookDialogFragment"
            app:destination="@id/updateBookDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.jankku.eino.ui.movie.MovieListFragment"
        android:label="@string/navigation_movies_label"
        tools:layout="@layout/fragment_movie_list">
        <action
            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.jankku.eino.ui.settings.SettingsFragment"
        android:label="@string/navigation_settings_label" />
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.jankku.eino.ui.movie.MovieDetailFragment"
        android:label="@string/navigation_movie_detail_label"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movie"
            app:argType="com.jankku.eino.data.model.Movie" />
    </fragment>

    <dialog
        android:id="@+id/addBookDialogFragment"
        android:name="com.jankku.eino.ui.book.AddBookDialogFragment"
        android:label="@string/navigation_add_book_dialog_label"
        tools:layout="@layout/fragment_add_book_dialog" />
    <dialog
        android:id="@+id/updateBookDialogFragment"
        android:name="com.jankku.eino.ui.book.UpdateBookDialogFragment"
        android:label="UpdateBookDialogFragment"
        tools:layout="@layout/fragment_update_book_dialog" />

</navigation>